--- a/service-météo/docker-compose.yml
+++ b/service-météo/docker-compose.yml
@@ -2,28 +2,35 @@ version: '3.8'
 
 services:
   weather:
-    build: .
+    build:
+      context: ./weather-service
     ports:
-      - "4000:4000"
+      - "5000:5000"
     env_file:
       - .env
+
+  cache_service:
+    build:
+      context: ./persistance-orm
+    ports:
+      - "5001:5000"
     depends_on:
       - db
-
+      - weather
+    env_file:
+      - .env
   db:
     image: mysql:8.0
     restart: always
-    env_file:
-      - .env
     environment:
       MYSQL_DATABASE: ${DB_NAME}
       MYSQL_USER: ${DB_USER}
       MYSQL_PASSWORD: ${DB_PASSWORD}
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
+    #ports:
+    #  - "3306:3306"
     volumes:
       - dbdata:/var/lib/mysql
-    ports:
-      - "3306:3306"
 
 volumes:
   dbdata:
